--- a/src/global.css
+++ b/src/global.css
@@ -38,4 +38,16 @@
         src: url('/fonts/files/eb-garamond-latin-700-normal.woff2') format('woff2'), url('/fonts/files/eb-garamond-latin-700-normal.woff') format('woff');
 
     }
+
+    @font-face {
+        font-family: 'MrsEavesRoman';
+        src: url('/fonts/files/MrsEavesRoman.woff') format('woff')
+
+    }
+
+    @font-face {
+        font-family: 'MrsEavesRomanSmallCaps';
+        src: url('/fonts/files/MrsEavesRomanSmallCaps.woff') format('woff')
+
+    }
 }
